--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,8 @@ entrypoint: gunicorn -b :$PORT main:app
 env_variables:
   PROJECT_ID: "My First Project"
 
+env: flex
+
 automatic_scaling:
   target_cpu_utilization: 0.65
   target_throughput_utilization: 0.65
